# portenta-x8-eeprom-utils

./: CMakeLists.txt  README.md  eepdump.c  eepflash.sh  eepmake.c  eeprom_settings.txt  eeptypes.h
.github/workflows/: smoke-test.yml  sync-labels.yml
